<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home_selected"
        android:title="@string/title_home"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_auction"
        android:icon="@drawable/ic_action_auction_selected"
        android:title="@string/title_auction"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_action_category_selected"
        android:title="@string/title_category"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_action_dashboard_selected"
        android:title="@string/title_dashboard"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_settings"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_action_setting_selected"
        android:title="@string/title_settings" />-->
</menu>
