<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <com.bluemortar.customui.CustomTextView
            android:id="@+id/tv_no_internet_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/NoInternetTitleStr" />

        <ImageView
            android:id="@+id/iv_no_internet"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/no_internet" />

        <com.bluemortar.customui.CustomTextView
            android:id="@+id/tv_no_internet_desc_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/NoInternetDescOneStr" />

        <com.bluemortar.customui.CustomTextView
            android:id="@+id/tv_no_internet_desc_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:text="@string/NoInternetDescTwoStr" />

        <Button
            android:id="@+id/btn_no_internet_retry"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_black_bordor"
            android:text="@string/NoInternetButtonStr"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</RelativeLayout>