<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/LoginMainLayoutPadding"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginImgHeight"
                android:src="@drawable/ic_logo"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:gravity="bottom"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/LoginHintColor"
                        app:hintTextAppearance="@style/TextLabel">

                        <com.bluemortar.customui.CustomEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:drawablePadding="@dimen/LoginEditTextLeftDrawablePadding"
                            android:hint="@string/LoginEmailTextName"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/LoginEditTextPadding"
                            android:textColor="@color/LoginHintColor"
                            android:textColorHint="@color/LoginHintColor"
                            android:textCursorDrawable="@null"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_small"
                    android:background="@color/colorGreyDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/LoginHintColor"
                        app:hintTextAppearance="@style/TextLabel">

                        <com.bluemortar.customui.CustomEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/LoginPasswordTextName"
                            android:inputType="textPassword"
                            android:padding="@dimen/LoginEditTextPadding"
                            android:textColor="@color/LoginHintColor"
                            android:textColorHint="@color/LoginHintColor"
                            android:textCursorDrawable="@null"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_small"
                    android:background="@color/colorGreyDivider"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/llForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.bluemortar.customui.CustomTextView
                        android:id="@+id/tvClearFields"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/LoginClear"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_20"
                        android:textStyle="normal" />

                    <com.bluemortar.customui.CustomTextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/LoginForgotPasswordText"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.bluemortar.customui.CustomButton
                        android:id="@+id/btnLogin"
                        android:layout_width="72dp"
                        android:layout_height="70dp"
                        android:background="@drawable/round_icon"
                        android:text="@string/LoginBtnText"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_14" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/LoginEditTextLayoutMarginBottom"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="@dimen/LoginMargionTop"
                    android:gravity="center">

                    <com.bluemortar.customui.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/LoginNoAccount"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="@dimen/LoginMargionTop"
                    android:orientation="vertical">

                    <com.bluemortar.customui.CustomButton
                        android:id="@+id/btnSignup"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/LoginBtnHeight"
                        android:background="@null"
                        android:text="@string/LoginBtnTextForSignUp"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPinkDivider"
                        android:textSize="@dimen/text_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_small"
                        android:background="@color/colorPinkDivider"
                        android:visibility="visible" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
